# streetscapes

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  README.md  convert-csv.ipynb  convert-csv.py  convert_csv_to_parquet.py  environment.yml  mkdocs.yml  plot-amsterdam.ipynb  plot_amsterdam.ipynb  plot_city.ipynb  pyproject.toml  requirements.txt  subset-amsterdam.ipynb  subset_data.ipynb
.github/workflows/: pypi.yml
docs/: about.md  index.md  mkdocs.yml
docs/about/: contributing.md  licence.md
docs/api/: main.md
docs/api/models/: base.md  dinosam.md  maskformer.md
docs/api/sources/: hf.md  image.md
docs/docs/: home.md  index.md
docs/examples/: convert_csv_to_parquet.ipynb  explore_global_streetscapes.ipynb  maskformer.ipynb  plot_city.ipynb  rasterise.ipynb  use_data_sources.ipynb
docs/stylesheets/: extra.css
docs/tutorial/: tutorial.ipynb  workspace.ipynb
docs/tutorials/: workspace.ipynb
notebooks/: convert_csv_to_parquet.ipynb  download_city_images.ipynb  mapillary.ipynb  mapillary_example.ipynb  plot_city.ipynb  segmentation.ipynb  subset_data.ipynb
scripts/: count_image_size.py  segment_optimized.py
scripts/Amsterdam/: download_images.py  explore_metadata.ipynb  fetch_metadata.py  identify_buildings.ipynb
src/streetscapes/: __init__.py  conf.py  enums.py  explore_data.ipynb  functions.py  info.py  interactive_api.ipynb
streetscapes/: conf.py  functions.py  main.py  segmentation.py  types.py
streetscapes/models/: __init__.py  base.py  maskformer.py
usecases/Amsterdam/: download_images.ipynb  download_images.py  explore_metadata.ipynb  fetch_image_urls.py
(+59 files in other folders)
