[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "streetscapes"
version = "2024"
dependencies = [
    "dask",
    "ephem",
    "fastparquet",
    "fiona",
    "geodatasets",
    "geopandas",
    "h3",
    "osmnx",
    "pyproj",
    "ipykernel",
    "matplotlib",
    "pandas",
    "pyarrow",
    "rasterio",
    "seaborn",
    "timezonefinder",
    "tqdm",
]
requires-python = ">=3.11"
authors = []
description = "Code for extracting the emissivity and albedo of buildings in cities based on images downloaded from Mapillary and KartaView."
readme = "README.md"
license = { file = "LICENCE.md" }